feat: 瀹炵幇澶氱骇缈昏瘧閾炬潯鍜屽瓧骞曞姛鑳戒紭鍖? - 瀹炵幇缈昏瘧浼樺厛绾ч摼鏉★細Google缈昏瘧 -> LibreTranslate -> DeepL -> LLM缈昏瘧 - 绉婚櫎MyMemory缈昏瘧锛堟晥鏋滀笉浣筹級 - 娣诲姞DeepL缈昏瘧鏀寔锛堥渶瑕丄PI key锛屾瘡鏈?0涓囧瓧绗﹀厤璐癸級 - 娣诲姞LibreTranslate缈昏瘧鏀寔锛堝紑婧愶紝鍏嶈垂锛屾棤闇€API key锛?- 浼樺寲瀛楀箷鏄剧ず閫昏緫锛氳瑷€鐩稿悓鏃惰嚜鍔ㄩ殣钘忔彁绀哄拰瀛楀箷 - 娣诲姞缈昏瘧鏈嶅姟鏃ュ織鏍囪瘑锛屾竻鏅版樉绀轰娇鐢ㄧ殑缈昏瘧鏈嶅姟 - 娣诲姞缈昏瘧API璇锋眰鏃ュ織 - 淇googletrans寮傛璋冪敤闂 - 娣诲姞aiohttp渚濊禆鐢ㄤ簬HTTP璇锋眰

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -37,6 +37,8 @@ dependencies = [
   "pyrnnoise>=0.4.0",
   "beautifulsoup4>=4.12.0",
   "defusedxml>=0.7.1",
+  "googletrans>=4.0.0",
+  "aiohttp>=3.8.0",
 ]
 
 
