--- a/.gitignore
+++ b/.gitignore
@@ -96,5 +96,6 @@ start_servers.bat
 # --- CosyVoice Ignore Rules ---
 local_server/cosyvoice_server/*wav
 
-
+# 忽略 changelog 文件
+changelog
 start.bat
